--- a/templates/signin.html
+++ b/templates/signin.html
@@ -72,7 +72,7 @@
                 </a>
               </div> -->
 
-              <span class="d-block text-left my-4 text-muted"> Don't have an account? <a href="/signup/" id="signup-link" style="color:  #38D39F;">Sign Up</a></span>
+              <span class="d-block text-left my-4 text-muted"> Don't have an account? <a href="/club/" id="signup-link" style="color:  #38D39F;">Sign Up</a></span>
             </form>
             </div>
           </div>
