--- a/templates/signup.html
+++ b/templates/signup.html
@@ -63,7 +63,7 @@
 
               <input type="submit" value="Sign In" class="btn text-white btn-block btn-primary">
 
-              <!-- <span class="d-block text-left my-4 text-muted"> or <a href="/signin/" id="signup-link" style="color:  #38D39F;">Sign In</a></span> -->
+              <span class="d-block text-left my-4 text-muted"> or <a href="/club/" id="signup-link" style="color:  #38D39F;">Sign In</a></span>
               
               <!-- <div class="social-login">
                 <a href="#" class="facebook">
