--- a/static/css/club1.css
+++ b/static/css/club1.css
@@ -8,10 +8,16 @@
 
 /* MEDIA QUERY */
 @media (max-width: 60em) {
-    body {
+  body {
       padding: 3rem;
-    }
   }
+
+  .main {
+      width: 100%; /* Set width to 100% for responsiveness */
+  }
+
+  /* Add any other responsive styles for .main here */
+}
   
   /* VARIABLES */
   :root {
@@ -50,19 +56,10 @@
     /* background-position: center; */
     font-family: "Inter", sans-serif;
   }
+
   
   /* MAIN CONTENT */
   .grid {
-    display: grid;
-    width: 114rem;
-    grid-row-gap: 3rem;
-    grid-column-gap: 3rem;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    margin: 0 auto; /* Center the grid horizontally */
-    /* margin-top: 100px; */
-  }
-
-  .grid1 {
     display: grid;
     width: 114rem;
     grid-row-gap: 3rem;
