implemented updation of quantity of items and created the borrow cart

--- a/static/css/inventory.css
+++ b/static/css/inventory.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin-top: 20px;
     background: #f57272;
 }
@@ -20,7 +20,7 @@ body {
     background-color: #fc5959;
 }
 
-/* product list */
+
 .product-list img {
     width: 100%;
     border-radius: 4px 4px 0 0;
@@ -61,6 +61,73 @@ body {
     margin-top: 10px;
     font-size: 16px;
 }
+
+.product-list .price {
+    color: #fc5959;
+    font-size: 15px;
+} */
+
+body {
+    margin-top: 0px;
+    background: #f57272;
+    padding-top:2em;
+}
+
+* { color:#000000; text-decoration: none;}
+
+.panel-body {
+    display: flex;
+    padding: 5px;
+    gap: 10px;
+}
+
+.panel-body input {
+    border: 2px solid transparent;
+}
+
+.panel-body button {
+    flex: 1;
+    width: 50%;
+    color: rgb(255, 255, 255);
+    background-color: #fc5959;
+}
+
+/* product list */
+.product-list img {
+    width: 100%;
+    border-radius: 4px 4px 0 0;
+    -webkit-border-radius: 4px 4px 0 0;
+}
+
+/* .pro-img-box {
+    position: relative;
+    display: flex;
+    align-items: center; 
+    justify-content: space-between; 
+} */
+
+.adtocart {
+    background: #fc5959;
+    width: 40px;
+    height: 40px;
+    border-radius: 70%;
+    -webkit-border-radius: 70%;
+    color: #fff;
+    text-align: center;
+    border: 3px solid #fff;
+}
+
+.adtocart i {
+    color: #fff;
+    font-size: 18px;
+    line-height: 35px;
+}
+
+/* .pro-title {
+    color: #5A5A5A;
+    font-size: 16px;
+    margin: 10px 0; 
+} */
 
 .product-list .price {
     color: #fc5959;
