--- a/templates/club1.html
+++ b/templates/club1.html
@@ -6,86 +6,96 @@
   <meta name="description" content="An example pen showing how a basic CSS Grid container can create a nice, responsive card layout.">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" type="text/css" href="/static/css/club1.css">
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <title>CSS Grid Cards</title>
+  <script>
+    $(function(){
+    $("#nav-container").load("/static/navbar.html");
+  });
+</script>
   <script src="/static/js/club_data.js"></script>
+
+  
 </head>
 <body>
- 
+
 <div class="main">  
+  <div id="nav-container"></div>
     <div class="two alt-two">
             <h1 class="heading">Choose A Club
               <span>To Borrow The Inventory</span>
             </h1>
     </div>
-<div class="grid">
+  <div class="grid" id="grid">
 
-  <div class="card">
-    <img class="card__img" src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Snowy Mountains">
-    <div class="card__content">
-      <h1 class="card__header">Robotics Society</h1>
-      <div class="card__text-wrapper">
-        <p class="card__text">Look up at the night sky, and find yourself <strong>immersed</strong> in the amazing mountain range of Aspen.</p>
+    <!-- <div class="card">
+      <img class="card__img" src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Snowy Mountains">
+      <div class="card__content">
+        <h1 class="card__header">Robotics Society</h1>
+        <div class="card__text-wrapper">
+          <p class="card__text">Look up at the night sky, and find yourself <strong>immersed</strong> in the amazing mountain range of Aspen.</p>
+        </div>
+        <button class="card__btn" onclick="card('CL01')">Borrow<span>&rarr;</span></button>
       </div>
-      <button class="card__btn" onclick="card('CL01')">Borrow<span>&rarr;</span></button>
     </div>
-  </div>
 
-  <div class="card">
-    <img class="card__img" src="https://images.unsplash.com/photo-1511379938547-c1f69419868d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Desert">
-    <div class="card__content">
-      <h1 class="card__header">Sangam</h1>
-      <div class="card__text-wrapper">
-        <p class="card__text">Capture the stunning <strong>essence</strong> of the early morning sunrise in the Californian wilderness, and surround yourself in a world you never even knew existed.</p>
+    <div class="card">
+      <img class="card__img" src="https://images.unsplash.com/photo-1511379938547-c1f69419868d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Desert">
+      <div class="card__content">
+        <h1 class="card__header">Sangam</h1>
+        <div class="card__text-wrapper">
+          <p class="card__text">Capture the stunning <strong>essence</strong> of the early morning sunrise in the Californian wilderness, and surround yourself in a world you never even knew existed.</p>
+        </div>
+        <button class="card__btn" onclick="card('CL02')">Borrow<span>&rarr;</span></button>
       </div>
-      <button class="card__btn" onclick="card('CL02')">Borrow<span>&rarr;</span></button>
     </div>
-  </div>
 
-  <div class="card">
-    <img class="card__img" src="https://images.unsplash.com/photo-1608178398319-48f814d0750c?q=80&w=1779&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Canyons">
-    <div class="card__content">
-      <h1 class="card__header">Nexus</h1>
-      <div class="card__text-wrapper">
-        <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, are truly something much more than incredible.</p>
+    <div class="card">
+      <img class="card__img" src="https://images.unsplash.com/photo-1608178398319-48f814d0750c?q=80&w=1779&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Canyons">
+      <div class="card__content">
+        <h1 class="card__header">Nexus</h1>
+        <div class="card__text-wrapper">
+          <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, are truly something much more than incredible.</p>
+        </div>
+        <button class="card__btn" onclick="card('CL03')">Borrow<span>&rarr;</span></button>
       </div>
-      <button class="card__btn" onclick="card('CL03')">Borrow<span>&rarr;</span></button>
     </div>
-  </div>
 
-  <div class="card">
-    <img class="card__img" src="https://images.unsplash.com/photo-1502209877429-d7c6df9eb3f9?q=80&w=2066&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Canyons">
-    <div class="card__content">
-      <h1 class="card__header">FrameX</h1>
-      <div class="card__text-wrapper">
-        <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, are truly something much more than incredible.</p>
+    <div class="card">
+      <img class="card__img" src="https://images.unsplash.com/photo-1502209877429-d7c6df9eb3f9?q=80&w=2066&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Canyons">
+      <div class="card__content">
+        <h1 class="card__header">FrameX</h1>
+        <div class="card__text-wrapper">
+          <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, are truly something much more than incredible.</p>
+        </div>
+        <button class="card__btn" onclick="card('CL04')">Borrow <span>&rarr;</span></button>
       </div>
-      <button class="card__btn" onclick="card('CL04')">Borrow <span>&rarr;</span></button>
     </div>
-  </div>
 
-  <div class="card">
-    <img class="card__img" src="https://images.unsplash.com/photo-1502982720700-bfff97f2ecac?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Canyons">
-    <div class="card__content">
-      <h1 class="card__header">Shutterbugs</h1>
-      <div class="card__text-wrapper">
-        <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, are truly something much more than incredible.</p>
+    <div class="card">
+      <img class="card__img" src="https://images.unsplash.com/photo-1502982720700-bfff97f2ecac?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Canyons">
+      <div class="card__content">
+        <h1 class="card__header">Shutterbugs</h1>
+        <div class="card__text-wrapper">
+          <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, are truly something much more than incredible.</p>
+        </div>
+        <button class="card__btn" onclick="card('CL05')">Borrow <span>&rarr;</span></button>
       </div>
-      <button class="card__btn" onclick="card('CL05')">Borrow <span>&rarr;</span></button>
     </div>
-  </div>
 
-  <div class="card">
-    <img class="card__img" src="https://plus.unsplash.com/premium_photo-1673514503542-3953ca855a03?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Canyons">
-    <div class="card__content">
-      <h1 class="card__header">Arteliers</h1>
-      <div class="card__text-wrapper">
-        <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, are truly something much more than incredible.</p>
+    <div class="card">
+      <img class="card__img" src="https://plus.unsplash.com/premium_photo-1673514503542-3953ca855a03?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Canyons">
+      <div class="card__content">
+        <h1 class="card__header">Arteliers</h1>
+        <div class="card__text-wrapper">
+          <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, are truly something much more than incredible.</p>
+        </div>
+        <button class="card__btn" onclick="card('CL06')">Borrow<span>&rarr;</span></button>
       </div>
-      <button class="card__btn" onclick="card('CL06')">Borrow<span>&rarr;</span></button>
-    </div>
+    </div> -->
   </div>
 </div>
-</div>
+
 
 <!-- <script src="/static/js/club_data.js"></script> -->
 <!-- <script>
@@ -107,13 +117,58 @@
 }
 </script> -->
 <script>
-  function card(id) {
-    // Construct the URL for the inventory page with the provided ID
-    const inventoryURL = `/inventory/${encodeURIComponent(id)}/`;
-    
-    // Redirect to the inventory page
-    window.location.href = inventoryURL;
-}
+    function card(id) {
+      // Construct the URL for the inventory page with the provided ID
+      const inventoryURL = `/inventory/${encodeURIComponent(id)}/`;
+      
+      // Redirect to the inventory page
+      window.location.href = inventoryURL;
+  }
+
+
+    console.log('{{.}}');
+
+  const backendData = JSON.parse('{{.}}');
+
+  // Access the properties as needed
+  const clubInfo = backendData.Club_id;
+  const club = backendData.Club;
+  const info = backendData.Info;
+  const link = backendData.Link;
+
+  console.log(clubInfo);
+  console.log(club);
+  console.log(info);
+  console.log(link);
+
+  // Function to create a product card
+  function createProductCard(clubInfo, club, info, link) {
+      const cardContainer = document.getElementById("grid");
+
+      const card = document.createElement("div");
+      card.className = "col-md-4";
+      card.innerHTML = `
+      <div class="card">
+        <img class="card__img" src="${link}" alt="Canyons">
+        <div class="card__content">
+          <h1 class="card__header">${club}</h1>
+          <div class="card__text-wrapper">
+            <p class="card__text">${info}</p>
+          </div>
+          <button class="card__btn" onclick="card('${clubInfo}')">Borrow<span>&rarr;</span></button>
+        </div>
+      </div>
+      `;
+
+      cardContainer.appendChild(card);
+  }
+
+  // Create product cards using data from the backend
+  for (let i = 0; i < clubInfo.length; i++) {
+      createProductCard(clubInfo[i], club[i], info[i], link[i]);
+  }
+
+
 </script>
 
 </body>
