--- a/templates/signin.html
+++ b/templates/signin.html
@@ -36,7 +36,7 @@
               <h3>Sign In</h3>
               <p class="mb-4">Sign In to continue</p>
             </div>
-            <form action="#" method="post">
+            <form action="/signin/" method="post" id="login-form">
               <div class="form-group first">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" id="login-username" name="login-username">
@@ -56,7 +56,8 @@
                 <span class="ml-auto"><a href="#" class="forgot-pass">Forgot Password</a></span> 
               </div>
 
-              <input type="submit" value="Log In" class="btn text-white btn-block btn-primary">
+              <!-- <input type="submit" value="Log In" class="btn text-white btn-block btn-primary"> -->
+              <button type="button" class="btn btn-block btn-primary" id="login-button" onclick="data()">Log In</button>
 
               <!-- <span class="d-block text-left my-4 text-muted"> or sign in with</span>
               
@@ -72,7 +73,7 @@
                 </a>
               </div> -->
 
-              <span class="d-block text-left my-4 text-muted"> Don't have an account? <a href="/club/" id="signup-link" style="color:  #38D39F;">Sign Up</a></span>
+              <span class="d-block text-left my-4 text-muted"> Don't have an account? <a href="/signup/" id="signup-link" style="color:  #38D39F;">Sign Up</a></span>
             </form>
             </div>
           </div>
@@ -88,5 +89,134 @@
     <script src="/static/js/popper.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/main.js"></script>
+
+    <script>
+    //   function data(){
+    //     var username = document.getElementById("login-username").value;
+    //     var password = document.getElementById("login-password").value;
+    //     var data = {
+    //       "username": username,
+    //       "password": password
+    //     };
+    //     console.log(data);
+    //     // $.ajax({
+    //     //   type: "POST",
+    //     //   url: "/login/",
+    //     //   data: data,
+    //     //   success: function(data){
+    //     //     console.log(data);
+    //     //     window.location.href = `/home/${encodeURIComponent(username)}`;
+    //     //   }
+    //     // });
+
+
+    //     $.ajax({
+    //     type: "POST",
+    //     url: "/signin/",
+    //     data: data,
+    //     success: function(data) {
+    //         console.log(data);
+    //         if (data == "success") {
+    //             // window.location.href = '/home/' + encodeURIComponent(username);
+    //             req(username);
+    //         } else {
+    //             alert("Invalid Credentials");
+    //         }
+    //     },
+    //     error: function(error) {
+    //         console.log(error);
+    //     }
+    // });
+
+    //   }
+
+    // function req(username){
+    //     console.log(username);
+    //     var data = {
+    //         "username": username
+    //     };
+    //     console.log(data);
+        
+    //     $.ajax({
+    //         type: "POST",
+    //         url: "/home/",
+    //         data: data,
+    //         success: function(data) {
+    //             console.log(data);
+    //             window.location.href = "/home/";
+    //         },
+    //         error: function(error) {
+    //             console.log(error);
+    //         }
+    //     });
+    //   }
+
+  //   $(document).ready(function () {
+  //   $("#login-button").on("click", function () {
+  //     // Use the form ID to select the form element
+  //     var form = $("#login-form")[0];
+
+  //     // Use FormData to serialize the form data
+  //     var formData = new FormData(form);
+
+  //     $.ajax({
+  //       type: "POST",
+  //       url: "/signin/",
+  //       data: formData,
+  //       // The following options are necessary for working with FormData
+  //       contentType: false,
+  //       processData: false,
+  //       success: function (data) {
+  //         console.log(data);
+  //         var responseData = JSON.parse(data);
+  //         console.log(responseData);  
+
+  //         if (responseData.Username) {
+  //           sessionStorage.setItem("username", formData.get("login-username"));
+  //           sessionStorage.setItem("name", responseData.Username);
+  //           // window.location.href = "/home/";
+  //         } else {
+  //           alert("Invalid Credentials");
+  //         }
+  //       },
+  //       error: function (error) {
+  //         console.log(error);
+  //       },
+  //     });
+  //   });
+
+  // });
+
+  function data(){
+    var username = document.getElementById("login-username").value;
+    var password = document.getElementById("login-password").value;
+
+    var data = {
+      "username": username,
+      "password": password
+    };
+
+    console.log(data);
+
+    $.ajax({
+      type: "POST",
+      url: "/signin/",
+      data: data,
+      success: function(data){
+        console.log(data);
+        var responseData = JSON.parse(data);
+        console.log(responseData);  
+
+        if (responseData.Username) {
+          sessionStorage.setItem("username", username);
+          sessionStorage.setItem("name", responseData.Username);
+          window.location.href = "/home/";
+        } else {
+          alert("Invalid Credentials");
+        }
+      }
+    });
+  }
+    </script>
   </body>
 </html>
