--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,7 +36,7 @@
               <h3>Sign Up</h3>
               <p class="mb-4">Sign up if you are a new user</p>
             </div>
-            <form action="#" method="post">
+            <form action="" method="post">
                 <div class="form-group first-1">
                     <label for="name">Name</label>
                     <input type="text" class="form-control" id="name" name="name">
@@ -52,6 +52,11 @@
                 <input type="password" class="form-control" id="password" name="password">
                 
               </div>
+              <div class="form-group last-2 mb-4">
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" class="form-control" id="confirmpassword" name="confirm-password">
+                
+              </div>
               
               <!-- <div class="d-flex mb-5 align-items-center">
                 <label class="control control--checkbox mb-0"><span class="caption">Remember me</span>
@@ -61,9 +66,10 @@
                 <span class="ml-auto"><a href="#" class="forgot-pass">Forgot Password</a></span> 
               </div> -->
 
-              <input type="submit" value="Sign In" class="btn text-white btn-block btn-primary">
+              <!-- <input type="submit" value="Sign In" class="btn text-white btn-block btn-primary"> -->
+              <button type="button" class="btn btn-block btn-primary" onclick="data()">Sign In</button>
 
-              <span class="d-block text-left my-4 text-muted"> or <a href="/club/" id="signup-link" style="color:  #38D39F;">Sign In</a></span>
+              <span class="d-block text-left my-4 text-muted"> or <a href="/signin/" id="signup-link" style="color:  #38D39F;">Sign In</a></span>
               
               <!-- <div class="social-login">
                 <a href="#" class="facebook">
@@ -91,5 +97,43 @@
   <script src="/static/js/popper.min.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/main.js"></script>
+  <script>
+    function data(){
+      var name = document.getElementById("name").value;
+      var username = document.getElementById("username").value;
+      var password = document.getElementById("password").value;
+      var confirmpassword = document.getElementById("confirmpassword").value;
+
+      var data = {
+        "name": name,
+        "username": username,
+        "password": password,
+        "confirm-password": confirmpassword
+      };
+      $.ajax({
+        type: "POST",
+        url: "/signup/",
+        data: data,
+        success: function(data){
+          console.log(data);
+
+          if(data==="success"){
+            sessionStorage.setItem("username", username);
+            sessionStorage.setItem("name", name);
+            window.location.href = "/home/";
+          }
+          else if(data==="password"){
+            alert("Passwords do not match");
+            location.reload();
+          }
+          else{
+            alert("Username already exists");
+            location.reload();
+          }
+        }
+      });
+     
+    }
+  </script>
   </body>
 </html>
