--- a/templates/home_after_login.html
+++ b/templates/home_after_login.html
@@ -56,7 +56,7 @@ https://templatemo.com/tm-570-chain-app-dev
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="home_after_login.html" class="logo">
-              <img src="/static/assets/images/logo.png" alt="Chain App Dev">
+              <img src="/static/assets/images/logo.jpg" alt="Chain App Dev" width="100px" height="75px">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
